# SMCDEL

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  BDDREL.hs  BENCHDC.hs  BENCHMC.hs  BENCHSAP.hs  CHANGELOG.md  DELLANG.hs  DEMO_S5.hs  EXAMPLES.hs  HELP.hs  KNSCAC.hs  KNSCUDD.hs  KNSNOO.hs  KNSROB.hs  KRIPKEDEL.hs  KRIPKEVIS.hs  Lex.x  MCTRIANGLE.hs  Makefile  Makefile.release  MyCUDD.hs  Parse.y  README.md  SAP.hs  SMCDEL.hs  SYMDEL.hs  TEST.hs  Token.hs  cabal.project  hie.yaml  package.yaml  smcdel.cabal  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
Examples/: CherylsBirthday.smcdel.txt  DiningCryptographers.smcdel.txt  DrinkingLogicians.smcdel.txt  MuddyChildren.smcdel.txt  MuddyChildrenDistributed.smcdel.txt  Playground.hs  SAPviaTranslation.lhs  russiancards.lhs
bench/: .gitignore  diningcrypto.hs  diningcrypto.lhs  muddychildren.hs  muddychildren.lhs  muddychildren.tex  sumandproduct.hs  sumandproduct.lhs
examples/: DiningCrypto.smcdel  Muddy.smcdel  MuddyShort.smcdel
exec/: smcdel-web.hs  smcdel.hs
sizeExperiments/: diningcryptographers.hs  muddychildren.hs  sumandproduct.hs
src/: MainCLI.hs  MainWEB.hs
src/SMCDEL/: Examples.hs  Language.hs  Test.hs  Translations.hs
src/SMCDEL/Bench/: DiningCrypto.hs  MuddyChildren.hs
src/SMCDEL/Examples/: Cheryl.hs  CherylDemo.hs  CoinFlip.hs  DiningCrypto.hs  DistKnw.hs  DoorMat.hs  DrinkLogic.hs  GossipKw.hs  GossipS5.hs  LetterPassing.hs  MuddyChildren.hs  MuddyPlanning.hs  Prisoners.hs  RussianCards.hs  SAPviaTranslation.hs  SallyAnne.hs  SimpleK.hs  SimpleS5.hs  SumAndProduct.hs  Toynabi.hs  WhatSum.hs
src/SMCDEL/Examples/DiningCrypto/: General.hs
src/SMCDEL/Examples/SumAndProduct/: General.hs
src/SMCDEL/Explicit/: Change.hs  DEMO_S5.hs  K.hs  S5.hs  Simple.hs
src/SMCDEL/Explicit/K/: Change.hs
src/SMCDEL/Internal/: Files.hs  Help.hs  KripkeVis.hs  Lex.x  MyCUDD.hs  MyHaskCUDD.hs  Parse.y  Sanity.hs  TaggedBDD.hs  TexDisplay.hs  Token.hs
src/SMCDEL/Mental_Programs/: Syntax_Semantics.hs
src/SMCDEL/Other/: BDD2Form.hs  Change.hs  MCTRIANGLE.hs  NonS5.hs  Planning.hs
src/SMCDEL/Symbolic/: CUDD.hs  Change.hs  HasCacBDD.hs  K.hs  K_CUDD.hs  Ki.hs  Ki_CUDD.hs  NooBDD.hs  Robbed.hs  S5.hs  S5_CUDD.hs  S5_DD.hs  SatZ3.hs
src/SMCDEL/Symbolic/K/: Change.hs
src/SMCDEL/Symbolic/S5/: Change.hs
src/SMCDEL/Translations/: Change.hs  Convert.hs  K.hs  S5.hs
src/SMCDEL/Translations/K/: Change.hs
static/: ace.js  check.js  index.html  mode-smcdel.js
test/: CUDD.hs  CUDD_K.hs  CUDD_Ki.hs  CUDD_S5.hs  Examples.hs  K.hs  NonS5.hs  Translations.hs  Web.hs
