name:                smcdel
version:             0.1.0.0
synopsis:            Symbolic Model Checking for Dynamic Epistemic Logic
description:         See README.md
homepage:            http://github.com/jrclogic/SMCDEL
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.eu
copyright:           2016 Malvin Gattinger
category:            Logic
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    SMCDEL.Language
                      SMCDEL.Explicit.Simple
                      SMCDEL.Explicit.DEMO_S5
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Symbolic.CUDD
                      SMCDEL.Translations
                      SMCDEL.Examples
                      SMCDEL.Other.MCTRIANGLE
                      SMCDEL.Other.BDD2Form
                      SMCDEL.Other.NonS5
  other-modules:      SMCDEL.Internal.Help
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.MyHaskCUDD
  build-depends:      base >= 4.7 && < 5,
                      array,
                      containers,
                      graphviz,
                      HasCacBDD,
                      cudd,
                      process,
                      QuickCheck,
                      random,
                      temporary

Executable smcdel
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            MainCLI.hs
  build-tools:        alex, happy
  build-depends:      base >= 4.7 && < 5,
                      ansi-terminal,
                      array,
                      directory,
                      filepath,
                      graphviz,
                      HasCacBDD,
                      process,
                      QuickCheck,
                      scotty,
                      smcdel,
                      temporary,
                      text,
                      transformers
  other-modules:      SMCDEL.Internal.Help
                      SMCDEL.Language
                      SMCDEL.Internal.Lex
                      SMCDEL.Internal.Parse
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.Token
                      SMCDEL.Symbolic.HasCacBDD

Test-Suite translations
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Translations.lhs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.7 && < 5,
                      QuickCheck,
                      random,
                      smcdel
  ghc-options:        -pgml g++ -Wall -fPIC -fno-full-laziness -fhpc -fforce-recomp
  cc-options:         -fPIC -shared

Benchmark bench-diningcrypto
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            SMCDEL/Bench/DiningCrypto.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.7 && < 5,
                      graphviz,
                      HasCacBDD,
                      smcdel,
                      QuickCheck,
                      process,
                      temporary,
                      time
  other-modules:      SMCDEL.Examples
                      SMCDEL.Explicit.Simple
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Language
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Translations

Benchmark bench-sumandproduct
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            SMCDEL/Bench/SumAndProduct.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.7 && < 5,
                      graphviz,
                      HasCacBDD,
                      smcdel,
                      QuickCheck,
                      process,
                      temporary,
                      time
  other-modules:      SMCDEL.Examples
                      SMCDEL.Explicit.DEMO_S5
                      SMCDEL.Explicit.Simple
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Language
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Translations

Benchmark bench-muddychildren
  ghc-options:        -Wall
  hs-source-dirs:     src
  default-language:   Haskell2010
  main-is:            SMCDEL/Bench/MuddyChildren.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.7 && < 5,
                      containers,
                      graphviz,
                      HasCacBDD,
                      smcdel,
                      QuickCheck,
                      cudd,
                      criterion,
                      process,
                      temporary,
                      time
  other-modules:      SMCDEL.Examples
                      SMCDEL.Explicit.DEMO_S5
                      SMCDEL.Explicit.Simple
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.MyHaskCUDD
                      SMCDEL.Language
                      SMCDEL.Other.MCTRIANGLE
                      SMCDEL.Other.NonS5
                      SMCDEL.Symbolic.CUDD
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Translations

Executable smcdel-web
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     src
  main-is:            MainWEB.hs
  build-tools:        alex, happy
  build-depends:      base >= 4.7 && < 5,
                      process,
                      scotty,
                      file-embed,
                      graphviz,
                      QuickCheck,
                      HasCacBDD,
                      smcdel,
                      temporary,
                      text,
                      array,
                      wai-middleware-static,
                      transformers
  other-modules:      SMCDEL.Examples
                      SMCDEL.Explicit.Simple
                      SMCDEL.Internal.Files
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.Lex
                      SMCDEL.Internal.Parse
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.Token
                      SMCDEL.Language
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Translations

source-repository head
  type:     git
  location: https://github.com/jrclogic/SMCDEL.git
