name:                smcdel
version:             0.1.0.0
synopsis:            Symbolic Model Checking for Dynamic Epistemic Logic
description:         See README.md
homepage:            https://github.com/jrclogic/SMCDEL
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.eu
copyright:           2016 Malvin Gattinger
category:            Logic
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    SMCDEL.Examples
                      SMCDEL.Explicit.DEMO_S5
                      SMCDEL.Explicit.Simple
                      SMCDEL.Internal.Files
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.Lex
                      SMCDEL.Internal.MyHaskCUDD
                      SMCDEL.Internal.Parse
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.Token
                      SMCDEL.Language
                      SMCDEL.Other.BDD2Form
                      SMCDEL.Other.Change
                      SMCDEL.Other.MCTRIANGLE
                      SMCDEL.Other.NonS5
                      SMCDEL.Symbolic.CUDD
                      SMCDEL.Symbolic.HasCacBDD
                      SMCDEL.Translations
  build-depends:      base >= 4.8 && < 5,
                      array,
                      containers,
                      cudd == 0.1.0.0,
                      file-embed,
                      graphviz,
                      HasCacBDD == 0.1.0.0,
                      lens,
                      process,
                      QuickCheck,
                      tagged,
                      temporary,
                      text,
                      time

Executable smcdel
  ghc-options:        -Wall
  default-language:   Haskell2010
  main-is:            exec/smcdel.hs
  build-tools:        alex, happy
  build-depends:      base >= 4.8 && < 5,
                      ansi-terminal,
                      directory,
                      filepath,
                      process,
                      smcdel

Executable smcdel-web
  ghc-options:        -Wall
  default-language:   Haskell2010
  main-is:            exec/smcdel-web.hs
  build-tools:        alex, happy
  build-depends:      base >= 4.8 && < 5,
                      scotty,
                      HasCacBDD,
                      js-jquery >= 3,
                      smcdel,
                      text

Test-Suite translations
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Translations.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      hspec,
                      QuickCheck,
                      smcdel

Test-Suite examples
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Examples.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      hspec,
                      QuickCheck,
                      smcdel

Benchmark bench-diningcrypto
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            diningcrypto.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      smcdel,
                      time

Benchmark bench-sumandproduct
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            sumandproduct.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      smcdel,
                      time

Benchmark bench-muddychildren
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            muddychildren.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      containers,
                      smcdel,
                      criterion

source-repository head
  type:     git
  location: https://github.com/jrclogic/SMCDEL.git
