name:                 smcdel
version:              1.0.0
synopsis:             Symbolic Model Checking for Dynamic Epistemic Logic
description:          See README.md and SMCDEL.pdf for references and documentation.
homepage:             https://github.com/jrclogic/SMCDEL
license:              GPL-2
license-file:         LICENSE
author:               Malvin Gattinger
maintainer:           malvin@w4eg.eu
category:             Logic
build-type:           Simple
cabal-version:        >=1.23
extra-source-files:   README.md
                      stack.yaml
                      static/index.html
                      static/viz-lite.js
                      Examples/DiningCryptographers.smcdel.txt
                      Examples/MuddyChildren.smcdel.txt
                      Examples/DrinkingLogicians.smcdel.txt

Library
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    SMCDEL.Examples
                      SMCDEL.Examples.CoinFlip
                      SMCDEL.Examples.DiningCrypto
                      SMCDEL.Examples.DrinkLogic
                      SMCDEL.Examples.GossipKw
                      SMCDEL.Examples.GossipS5
                      SMCDEL.Examples.MuddyChildren
                      SMCDEL.Examples.Prisoners
                      SMCDEL.Examples.RussianCards
                      SMCDEL.Examples.SallyAnne
                      SMCDEL.Examples.SumAndProduct
                      SMCDEL.Examples.WhatSum
                      SMCDEL.Explicit.DEMO_S5
                      SMCDEL.Explicit.K
                      SMCDEL.Explicit.K.Change
                      SMCDEL.Explicit.S5
                      SMCDEL.Internal.Help
                      SMCDEL.Internal.Lex
                      SMCDEL.Internal.MyHaskCUDD
                      SMCDEL.Internal.Parse
                      SMCDEL.Internal.TexDisplay
                      SMCDEL.Internal.Token
                      SMCDEL.Language
                      SMCDEL.Other.BDD2Form
                      SMCDEL.Other.MCTRIANGLE
                      SMCDEL.Other.Planning
                      SMCDEL.Symbolic.K
                      SMCDEL.Symbolic.K.Change
                      SMCDEL.Symbolic.S5
                      SMCDEL.Symbolic.S5_CUDD
                      SMCDEL.Symbolic.S5.Change
                      SMCDEL.Translations.K
                      SMCDEL.Translations.K.Change
                      SMCDEL.Translations.S5
  build-depends:      base >= 4.8 && < 5,
                      array,
                      containers,
                      cudd == 0.1.0.0,
                      graphviz,
                      HasCacBDD == 0.1.0.0,
                      lens,
                      process,
                      QuickCheck,
                      tagged,
                      temporary,
                      text,
                      time

Executable smcdel
  ghc-options:        -Wall
  default-language:   Haskell2010
  main-is:            exec/smcdel.hs
  other-modules:      Paths_smcdel
  build-tools:        alex, happy
  build-depends:      base >= 4.8 && < 5,
                      ansi-terminal,
                      directory,
                      filepath,
                      process,
                      smcdel

Executable smcdel-web
  ghc-options:        -Wall
  default-language:   Haskell2010
  main-is:            exec/smcdel-web.hs
  other-modules:      Paths_smcdel
  build-tools:        alex, happy
  build-depends:      base >= 4.8 && < 5,
                      file-embed,
                      scotty,
                      HasCacBDD,
                      js-jquery >= 3,
                      smcdel,
                      template-haskell,
                      text

Test-Suite translations
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Translations.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      hspec,
                      QuickCheck,
                      smcdel

Test-Suite examples
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Examples.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      hspec,
                      QuickCheck,
                      smcdel

Test-Suite nonS5
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            NonS5.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      containers,
                      hspec,
                      QuickCheck,
                      smcdel

Benchmark bench-diningcrypto
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            diningcrypto.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      smcdel,
                      time

Benchmark bench-sumandproduct
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            sumandproduct.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      criterion,
                      smcdel,
                      time

Benchmark bench-muddychildren
  ghc-options:        -Wall
  default-language:   Haskell2010
  hs-source-dirs:     bench
  main-is:            muddychildren.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.8 && < 5,
                      containers,
                      smcdel,
                      criterion

source-repository head
  type:     git
  location: https://github.com/jrclogic/SMCDEL.git
